@@ -1,6 +1,8 @@
+# Generated by mksrcinfo v8
+# Sat Apr  8 06:14:49 UTC 2017
 pkgbase = micromanager-git
 	pkgdesc = Software package for control of automated microscopes. CMMCore and python2 bindings only.
-	pkgver = 1.4.21.r39.ge60756c
+	pkgver = v2.0.0.beta2.r2147.gc6734e115
 	pkgrel = 1
 	url = http://www.micro-manager.org
 	install = mm.install
@@ -10,13 +12,14 @@ pkgbase = micromanager-git
 	license = BSD LGPL
 	makedepends = git
 	makedepends = swig
+	depends = clang
 	depends = boost
 	depends = libdc1394
 	depends = python2
 	depends = python2-numpy
 	provides = micromanager
 	conflicts = micromanager
-	source = micromanager-git::git+https://github.com/mdcurtis/micromanager-upstream.git#commit=e60756c
+	source = micromanager-git::git+https://github.com/micro-manager/micro-manager.git/#commit=c6734e1151bd59514e4ee629e24b1445f07be6c1
 	source = micromanager-lib.conf
 	md5sums = SKIP
 	md5sums = b7b6a68ce53d8ea1a4a29d187174ee4c
